# xml-parse-benchmark

./: .gitignore  README.md  bench.py  build.sh
lang/golang/: .gitignore  go.mod  go.sum  main.go  main_test.go  type.go
lang/python/: main.py
lang/rust/: Cargo.toml
lang/rust/src/: dblp.rs  main.rs
