[package]
name = "citegraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"

quick-xml = {git="https://github.com/tafia/quick-xml",features=["serialize","encoding","escape-html"]}
serde = {version="1.0.199",features = ["derive"]}
